--- a/views/pages/editar-endereco.ejs
+++ b/views/pages/editar-endereco.ejs
@@ -22,7 +22,7 @@
     <section class="container-finalizar">
         <a href="/finalizar" class="cart-button">Voltar</a>
         <h1 class="Titulo">Editar Endereço</h1>
-        <form action="/editar/<%= endereco.id %>" method="POST">
+        <form class='finalizar' action="/editar/<%= endereco.id %>" method="POST">
             <label for="nome">Nome Completo:</label>
             <input type="text" name="nome" id="nome" required value="<%= endereco.nome %>">    
             <br>    
