--- a/views/pages/editar-pagamento.ejs
+++ b/views/pages/editar-pagamento.ejs
@@ -32,7 +32,7 @@
         
             <br>
         
-            <button class="link" type="submit">Editar</button>
+            <button class="link" type="submit">Salvar Alterações</button>
         </form>
     </section> 
     <footer>
